--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,13 @@
 {% load static %}
 
 {% block content %}
-<h1 class="display-4 text-success">Bonjour!</h1>
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="home-main-text display-3">Get</h1>
+            <h1 class="home-main-text display-3">The</h1>
+            <h1 class="home-main-text display-3">Fit</h1>
+        </div>
+    </div>
+</div>
 {% endblock %}
