--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,7 +32,7 @@
         </li>
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="womens-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Women
+                Womenswear
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="womens-link">
                 <a href="" class="dropdown-item">Leggings</a>
