--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -2,7 +2,7 @@
     <!-- to open the search bar -->
     <li class="list-inline-item">
         <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <div class="text-center">
+            <div class="text-center text-white">
                 <div><i class="fas fa-search fa-lg"></i></div>
                 <p class="my-0">Search</p>
             </div>
@@ -25,7 +25,7 @@
     <!-- to open the My account drop-down -->
     <li class="list-inline-item dropdown">
         <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <div class="text-center">
+            <div class="text-center text-white">
                 <div><i class="far fa-user fa-lg"></i></div>
                 <p class="my-0">My Account</p>
             </div>
@@ -41,7 +41,7 @@
     <!-- to access the shopping bag -->
     <li class="list-inline-item">
         <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
-            <div class="text-center">
+            <div class="text-center text-white">
                 <div><i class="fas fa-cart-arrow-down"></i></div>
                 <p class="my-0">
                     {% if grand_total %}
