--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,13 +1,19 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
-            <h1 class="home-main-text display-3">Get</h1>
-            <h1 class="home-main-text display-3">The</h1>
-            <h1 class="home-main-text display-3">Fit</h1>
+        <div><h1 class="home-main-text display-3">Get the fit to fit the work</h1></div>
         </div>
     </div>
 </div>
