--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,14 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
-        <div><h1 class="home-main-text display-3">Get the fit to fit the work</h1></div>
+            <div>
+                <h1 class="home-main-text">
+                    Get the fit to fit the work
+                </h1>
+                <div class="my-5">
+                    <a href="" class="shop-button btn btn-lg text-white rounded-0 text-capitalize py-3">Shop Here</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
