--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="container h-100">
     <div class="row h-100">
-        <div class="col-7 col-md-6 my-auto">
+        <div class="col-7 col-md-6 my-auto ml-1">
             <div>
                 <h1 class="home-main-text">
                     Get the fit to fit the work
