--- a/static/css/base.css
+++ b/static/css/base.css
@@ -68,11 +68,17 @@ nav.navbar.navbar-expand-lg.navbar-dark.w-100 {
     border: black !important;
 }
 
+/* Nav Toggle */
+
 .navbar-toggler:focus,
 .navbar-toggler:active,
 .navbar-toggler-icon:focus {
     outline: none;
     box-shadow: none;
+}
+i.fas.fa-bars {
+    display: block;
+    font-size: 24px;
 }
 
 /* Search Box */
