--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    height: 100% !important;
 }
 
 body {
@@ -78,7 +78,6 @@ nav.navbar.navbar-expand-lg.navbar-dark.w-100 {
 }
 i.fas.fa-bars {
     display: block;
-    font-size: 24px;
 }
 
 /* Search Box */
