Created a templates directory with a products_page.htm file

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Almarai', sans-serif;
     background-color: black;
     opacity: 0.75;
+    color: #000;
 }
 
 /* Nav Bar */
