--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -2,20 +2,20 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            {{ products }}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col text-left mt-3">
+                <h2 class="page-title">View Our Full Range Here</h2>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
