--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,7 +12,7 @@ body {
 }
 
 .overlay {
-    background: #fafafa;
+    background: #000;
     height: 100%;
     width: 100%;
     top: 0;
@@ -134,12 +134,15 @@ a.shop-button.btn.btn-lg.text-white.rounded-0.text-capitalize.py-3 {
     opacity: 0.75;
 }
 
-/* ---------------Home Page--------------- */
-/* Page Title */
+/* ---------------Products Page--------------- */
+
 h2.page-title {
     letter-spacing: 1px;
     font-family: 'Almarai', sans-serif;
     font-size: 46px;
+    background-color: #000;
+    color: #fafafa;
+    font-weight: lighter;
 }
 
 
