--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
                 Get the fit to fit the work
             </h1>
             <div class="my-5">
-                <a href="" class="shop-button btn btn-lg text-white rounded-0 text-capitalize py-3">Shop Here</a>
+                <a href="{% url 'products' %}" class="shop-button btn btn-lg text-white rounded-0 text-capitalize py-3">Shop Here</a>
             </div>
         </div>
     </div>
