--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -26,11 +26,11 @@
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                         <div class="card border-0">
                             {% if product.image %}
-                            <a href="">
+                            <a href="{% url 'individual_product' product.id %}">
                                 <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
                             </a>
                             {% else %}
-                            <a href="">
+                            <a href="{% url 'individual_product' product.id %}">
                                 <img class="card-img-top" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                             </a>
                             {% endif %}
