--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -53,6 +53,7 @@
                     </ul>
                 </div>
             </div>
+            <a href="https://cdn.shopify.com/s/files/1/0040/5251/6910/files/Craft_size_guide_1024x1024.jpg?v=1595333114"><i class="fas fa-ruler-combined"></i>Size Guide</a>
         </div>
     </div>
 {% endblock %}
