Size guide: Changed standard blue link text to #fafafa to match the rest of the colour scheme

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -177,6 +177,12 @@ p.product_price.text-left {
     padding-bottom: 13px;
 }
 
+a.size-guide-text {
+    color: #fafafa;
+    text-decoration: none;
+    background-color: transparent;
+}
+
 p.product_description.mt-3 {
     color: #fafafa;
     font-size: 19px;
