--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -41,6 +41,8 @@
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     <p class="product_price text-left">£{{ product.price }}</p>
+                    <a class="size-guide-text" href="https://cdn.shopify.com/s/files/1/0040/5251/6910/files/Craft_size_guide_1024x1024.jpg?v=1595333114" 
+                        target="_blank"><i class="fas fa-ruler-combined"></i><br>  Size Guide</a>
                     <p class="product_description mt-3">{{ product.description }}</p>
                     <hr class="page-breaker">
                     <p class="details-header">Product Details</p>
@@ -53,7 +55,6 @@
                     </ul>
                 </div>
             </div>
-            <a href="https://cdn.shopify.com/s/files/1/0040/5251/6910/files/Craft_size_guide_1024x1024.jpg?v=1595333114"><i class="fas fa-ruler-combined"></i>Size Guide</a>
         </div>
     </div>
 {% endblock %}
