--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -73,7 +73,7 @@
                                     <div class="col">
                                         <p>£{{ product.price }}</p>
                                         {% if product.rating %}
-                                            <small><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                            <small><i class="fas fa-thumbs-up mr-1"></i>{{ product.rating }} / 5</small>
                                         {% else %}
                                             <small>No Rating</small>
                                         {% endif %}
