--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -14,7 +14,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col text-left mt-4">
-            <h2 class="page-title">insert jinja template for category</h2>
+            <h2 class="page-title text-capitalize">{{ product.category }}</h2>
             <hr class="page-breaker">
         </div>
     </div>
