--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -41,8 +41,16 @@
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     <p class="product_price text-left">£{{ product.price }}</p>
-                    <a class="size-guide-text" href="https://cdn.shopify.com/s/files/1/0040/5251/6910/files/Craft_size_guide_1024x1024.jpg?v=1595333114" 
+                    <!-- Selectng a size -->
+                        <a class="size-guide-text" href="https://cdn.shopify.com/s/files/1/0040/5251/6910/files/Craft_size_guide_1024x1024.jpg?v=1595333114" 
                         target="_blank"><i class="fas fa-ruler-combined"></i><br>  Size Guide</a>
+                        <select class="form-control rounded-0" name="product_size" id="id_product_size">
+                            <option value="extra small">Extra Small</option>
+                            <option value="small">Small</option>
+                            <option value="medium" selected>Medium</option>
+                            <option value="large">Large</option>
+                            <option value="extra large">Extra Large</option>
+                        </select>
                     <p class="product_description mt-3">{{ product.description }}</p>
                     <hr class="page-breaker">
                     <p class="details-header">Product Details</p>
@@ -53,6 +61,51 @@
                             <p class="detail_03">{{ product.detail_03 }}</p>
                         </li>
                     </ul>
+                </div>
+                <!-- Add to shopping bag -->
+                <form class="form" action="" method="POST">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-50">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-black rounded-0" 
+                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-minus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                    <input class="form-control qty_input" type="number"
+                                        name="quantity" value="1" min="1" max="99"
+                                        data-item_id="{{ product.id }}"
+                                        id="id_qty_{{ product.id }}">
+                                    <div class="input-group-append">
+                                        <button class="increment-qty btn btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-plus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col{% if s %}-12 mt-2{% endif %}">
+                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
+                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
