--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -63,7 +63,7 @@
                     </ul>
                 </div>
                 <!-- Add to shopping bag -->
-                <form class="form" action="" method="POST">
+                <form class="form" action="" method="POST"></form>
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
