--- a/static/css/base.css
+++ b/static/css/base.css
@@ -187,6 +187,25 @@ p.product_name {
     font-family: 'Almarai';
 }
 
+/* Product increment - decrement  */
+p.quantity-header-text.mt-3 {
+    color: #fafafa;
+}
+
+input#id_qty_3 {
+    background-color: black;
+    color: #fafafa;
+    width: 30%;
+}
+
+i.fas.fa-plus {
+    color: #fafafa;
+}
+
+i.fas.fa-minus {
+    color: #fafafa;
+}
+/* ------------ */
 small.product_rating {
     color: #fafafa;
     font-size: 19px;
@@ -261,6 +280,13 @@ and (max-device-width : 480px) {
         margin-top: 15px;
         margin-bottom: 15px;
     }
+    .form-group.quantity-box {
+        width: 40%;
+        background-color: black;
+        color: #fafafa;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
 }
 
 /* Desktops and laptops ----------- */
@@ -268,6 +294,14 @@ and (max-device-width : 480px) {
 and (min-width : 1224px) {
     select#id_product_size {
         width: 20%;
+        background-color: black;
+        color: #fafafa;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .form-group.quantity-box {
+        width: 40%;
         background-color: black;
         color: #fafafa;
         margin-top: 15px;
