--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,7 +51,7 @@
                             <option value="large">Large</option>
                             <option value="extra large">Extra Large</option>
                         </select>
-                    <p class="product_description mt-3">{{ product.description }}</p>
+                    <p class="product_description mt-4 mb-4">{{ product.description }}</p>
                     <hr class="page-breaker">
                     <p class="details-header">Product Details</p>
                     <ul>
@@ -67,8 +67,8 @@
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
-                            <div class="form-group w-50">
+                            <p class="quantity-header-text">Quantity:</p>
+                            <div class="form-group quantity-box">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <button class="decrement-qty btn btn-black rounded-0" 
@@ -94,13 +94,13 @@
                             </div>
                         </div>
                         <div class="col{% if s %}-12 mt-2{% endif %}">
-                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-4">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-4" value="Add to Bag">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
 
