--- a/static/css/base.css
+++ b/static/css/base.css
@@ -192,7 +192,7 @@ p.quantity-header-text{
     color: #fafafa;
 }
 
-input#id_qty_3 {
+input.form-control.qty_input {
     background-color: black;
     color: #fafafa;
     width: 30%;
