--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -11,8 +11,8 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
-                <a href="{% url 'products' %}?sort=price&direction=desc" class="dropdown-item">By Rating</a>
-                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Category</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
@@ -21,13 +21,13 @@
                 Menswear
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="mens-link">
-                <a href="" class="dropdown-item">Joggers</a>
-                <a href="" class="dropdown-item">Tshirts</a>
-                <a href="" class="dropdown-item">Tops</a>
-                <a href="" class="dropdown-item">Hoodies</a>
-                <a href="" class="dropdown-item">Tanks</a>
-                <a href="" class="dropdown-item">Shorts</a>
-                <a href="" class="dropdown-item">All Mens</a>
+                <a href="{% url 'products' %}?category=joggers" class="dropdown-item">Joggers</a>
+                <a href="{% url 'products' %}?category=tshirts" class="dropdown-item">Tshirts</a>
+                <a href="{% url 'products' %}?category=tops" class="dropdown-item">Tops</a>
+                <a href="{% url 'products' %}?category=hoodies" class="dropdown-item">Hoodies</a>
+                <a href="{% url 'products' %}?category=tanks" class="dropdown-item">Tanks</a>
+                <a href="{% url 'products' %}?category=shorts" class="dropdown-item">Shorts</a>
+                <a href="{% url 'products' %}?category=joggers,tshirts,tops,hoodies,tanks,shorts" class="dropdown-item">All Mens</a>
             </div>
         </li>
         <li class="nav-item dropdown">
