Changed category names in fixtures to seperate menswear and womens wear for same product categories, urls updated for the drop downs

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -22,12 +22,12 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="mens-link">
                 <a href="{% url 'products' %}?category=joggers" class="dropdown-item">Joggers</a>
-                <a href="{% url 'products' %}?category=tshirts" class="dropdown-item">Tshirts</a>
-                <a href="{% url 'products' %}?category=tops" class="dropdown-item">Tops</a>
-                <a href="{% url 'products' %}?category=hoodies" class="dropdown-item">Hoodies</a>
+                <a href="{% url 'products' %}?category=mens_tshirts" class="dropdown-item">Tshirts</a>
+                <a href="{% url 'products' %}?category=mens_tops" class="dropdown-item">Tops</a>
+                <a href="{% url 'products' %}?category=mens_hoodies" class="dropdown-item">Hoodies</a>
                 <a href="{% url 'products' %}?category=tanks" class="dropdown-item">Tanks</a>
-                <a href="{% url 'products' %}?category=shorts" class="dropdown-item">Shorts</a>
-                <a href="{% url 'products' %}?category=joggers,tshirts,tops,hoodies,tanks,shorts" class="dropdown-item">All Mens</a>
+                <a href="{% url 'products' %}?category=mens_shorts" class="dropdown-item">Shorts</a>
+                <a href="{% url 'products' %}?category=joggers,mens_tshirts,mens_tops,mens_hoodies,tanks,mens_shorts" class="dropdown-item">All Mens</a>
             </div>
         </li>
         <li class="nav-item dropdown">
@@ -36,12 +36,12 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="womens-link">
                 <a href="{% url 'products' %}?category=leggings" class="dropdown-item">Leggings</a>
-                <a href="{% url 'products' %}?category=tshirts" class="dropdown-item">Tshirts</a>
-                <a href="{% url 'products' %}?category=tops" class="dropdown-item">Tops</a>
-                <a href="{% url 'products' %}?category=hoodies" class="dropdown-item">Hoodies</a>
+                <a href="{% url 'products' %}?category=womens_tshirts" class="dropdown-item">Tshirts</a>
+                <a href="{% url 'products' %}?category=womens_tops" class="dropdown-item">Tops</a>
+                <a href="{% url 'products' %}?category=womens_hoodies" class="dropdown-item">Hoodies</a>
                 <a href="{% url 'products' %}?category=vests" class="dropdown-item">Vests</a>
-                <a href="{% url 'products' %}?category=shorts" class="dropdown-item">Shorts</a>
-                <a href="{% url 'products' %}?category=leggings,tshirts,tops,hoodies,vests,shorts" class="dropdown-item">All Womens</a>
+                <a href="{% url 'products' %}?category=womens_shorts" class="dropdown-item">Shorts</a>
+                <a href="{% url 'products' %}?category=leggings,womens_tshirts,womens_tops,womens_hoodies,vests,womens_shorts" class="dropdown-item">All Womens</a>
             </div>
         </li>
         <li class="nav-item dropdown">
